--- a/NaucnaCentrala/pom.xml
+++ b/NaucnaCentrala/pom.xml
@@ -15,21 +15,70 @@
 	<name>NaucnaCentrala</name>
 	<description>Demo project for Spring Boot</description>
 
+	
 	<properties>
-		<java.version>1.8</java.version>
-	</properties>
+  		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  		<property name="hibernate.dialect">org.hibernate.dialect.MySQL5Dialect</property>
+  		<java.version>1.8</java.version>
+ 	</properties>
+	
+	
+	
 
 	<dependencies>
+			
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
+	     	<groupId>org.springframework.boot</groupId>
+         	<artifactId>spring-boot-starter-web-services</artifactId>
+	    </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		 <dependency>
+   			<groupId>org.springframework.boot</groupId>
+   			<artifactId>spring-boot-starter-aop</artifactId>
+  		</dependency> 
+		
+		
+		
+		<!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
+		<dependency>
+    		<groupId>javax.persistence</groupId>
+    		<artifactId>javax.persistence-api</artifactId>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+  		 	<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		
+		<dependency>
+   			<groupId>org.springframework.boot</groupId>
+   			<artifactId>spring-boot-starter-data-jpa</artifactId>
+  		</dependency>
+		
+		
+		<dependency>
+    		<groupId>javax.xml.bind</groupId>
+     		<artifactId>jaxb-api</artifactId>
+     	</dependency>
+     	
+		<!-- Ponovno pokretanje -->
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-devtools</artifactId>
+    		<optional>true</optional>
+    		<scope>runtime</scope>
+		</dependency>
+		
+		
+		
 	</dependencies>
 
 	<build>
