--- a/NaucnaCentrala/pom.xml
+++ b/NaucnaCentrala/pom.xml
@@ -28,6 +28,7 @@
 
 	<dependencies>
 			
+		<!-- Za pokretanje tomcata -->	
 		<dependency>
 	     	<groupId>org.springframework.boot</groupId>
          	<artifactId>spring-boot-starter-web-services</artifactId>
@@ -45,7 +46,25 @@
   		</dependency> 
 		
 		
+		<!-- spring security -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+    	</dependency>
 		
+		
+		<!-- JSON web token -->
+		<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+		<dependency>
+    		<groupId>com.auth0</groupId>
+    		<artifactId>java-jwt</artifactId>
+    		<version>3.4.0</version>
+		</dependency>
+		
+		
+		
+		<!-- Za anotacije -->
 		<!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
 		<dependency>
     		<groupId>javax.persistence</groupId>
@@ -58,6 +77,7 @@
     		<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		
+		<!-- da se napravi sema u bazi(repository) -->
 		<dependency>
    			<groupId>org.springframework.boot</groupId>
    			<artifactId>spring-boot-starter-data-jpa</artifactId>
