--- a/NaucnaCentrala/pom.xml
+++ b/NaucnaCentrala/pom.xml
@@ -45,6 +45,12 @@
    			<artifactId>spring-boot-starter-aop</artifactId>
   		</dependency> 
 		
+		<dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-mock</artifactId>
+    	<version>2.0.8</version>
+		</dependency>
+		
 		
 		<!-- spring security -->
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
