--- a/NaucnaCentrala/pom.xml
+++ b/NaucnaCentrala/pom.xml
@@ -111,6 +111,11 @@
 		</dependency>
 		
 		
+		<!-- Elasticsearch -->
+		<dependency>
+ 			<groupId>org.springframework.boot</groupId>
+ 			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+		</dependency>
 		
 	</dependencies>
 
