--- a/NaucnaCentrala/src/main/resources/application.properties
+++ b/NaucnaCentrala/src/main/resources/application.properties
@@ -31,3 +31,29 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
+
+
+
+
+
+#Elasticsearch
+#elasticsearch.clustername = mkyong-cluster
+elasticsearch.host = localhost
+elasticsearch.port = 9300
+
+spring.main.allow-bean-definition-overriding: true
+
+
+
+#mail
+spring.mail.host = smtp.gmail.com
+spring.mail.username = projekatad
+spring.mail.password = saskagagi1.
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+
+
+
+
