--- a/NaucnaCentrala/pom.xml
+++ b/NaucnaCentrala/pom.xml
@@ -14,19 +14,34 @@
 	<packaging>jar</packaging>
 	<name>NaucnaCentrala</name>
 	<description>Demo project for Spring Boot</description>
-
+	
 	
 	<properties>
   		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   		<property name="hibernate.dialect">org.hibernate.dialect.MySQL5Dialect</property>
   		<java.version>1.8</java.version>
+
  	</properties>
-	
 	
 	
 
 	<dependencies>
+	
+
+	 	<dependency>
+	      <groupId>org.camunda.bpm.springboot</groupId>
+	      <artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
+	      <version>3.2.0</version>
+	    </dependency>
+	
+	    <dependency>
+	      <groupId>com.sun.xml.bind</groupId>
+	      <artifactId>jaxb-impl</artifactId>
+	      <version>2.2.3</version>
+	    </dependency>
+
+	
 			
 		<!-- Za pokretanje tomcata -->	
 		<dependency>
@@ -138,6 +153,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+         		<groupId>org.apache.maven.plugins</groupId>
+          		<artifactId>maven-surefire-plugin</artifactId>
+          		<version>2.19.1</version>
+        	</plugin>
 		</plugins>
 	</build>
 
